ms-modyo-desafio-pokedex/deploy/prod/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ms-modyo-desafio-pokedex-gtw
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 10000
        name: http
        protocol: HTTP
      hosts:
        - "*"
